Fixed bug concerning 4.4.0 compatibility.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/jslang/trunk@34899 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-06-25 Christer <chrisv10@gmail.c.om>
+	* Fixed Bug #7993, concerning 4.4.0 compability
+
 2009-11-06 Morten Tranberg Hansen  <mth@cs.au.dk>
 
 	* initial code generated with kickstarter
